--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neuseelandreise</title>
+    <title>Lieblinsorte</title>
 </head>
 
 <body>
     <header>
         <!--Bildquellen: https://pixabay.com/de/photos/bamberg-rathaus-altes-rathaus-4530341/  -->
-        <img src="" alt="Walflosse im Meer und im Hintergrund Küste von Neuseeland">
+        <img src="" alt="Blick auf Altstadt von Bamberg mit altem Rathaus">
 
         <!--user:https://pixabay.com/de/photos/robbe-kegelrobbe-helgoland-d%C3%BCne-3080472/ -->
         <a href="https://github.com/webmapping/nz"><img src="images/user.jpg" alt="Robbengesicht"></a>
