--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
         <article>
             <h1>Lieblingsorte</h1>
             <h2>Bamberg</h2>
-            <p> <strong>Bamberg</strong>(mittelalterlich: Babenberg, bambergisch: Bambärch) ist eine fränkische kreisfreie Stadt im bayerischen Regierungsbezirk Oberfranken und Standort des Landratsamtes Bamberg. Sie ist die größte Mittelstadt Bayerns, Universitäts-, Schul- und Verwaltungsstadt, Sitz eines Oberlandesgerichtes und der Generalstaatsanwaltschaft Bamberg, wichtiges Wirtschaftszentrum Oberfrankens sowie Sitz des gleichnamigen Erzbistums und dessen Kirchenprovinz.
+            <p> <strong>Bamberg</strong> (mittelalterlich: Babenberg, bambergisch: Bambärch) ist eine fränkische kreisfreie Stadt im bayerischen Regierungsbezirk Oberfranken und Standort des Landratsamtes Bamberg. Sie ist die größte Mittelstadt Bayerns, Universitäts-, Schul- und Verwaltungsstadt, Sitz eines Oberlandesgerichtes und der Generalstaatsanwaltschaft Bamberg, wichtiges Wirtschaftszentrum Oberfrankens sowie Sitz des gleichnamigen Erzbistums und dessen Kirchenprovinz.
 
                 Die Stadt ist mit rund 80.000 Einwohnern die fünftgrößte Stadt Frankens, nach Nürnberg, Fürth, Würzburg und Erlangen sowie die größte Stadt Oberfrankens, die Agglomeration hat rund 117.000 Einwohner.[3] Bamberg ist in der Landesplanung als Oberzentrum des westlichen Oberfrankens ausgewiesen und zählt zur Metropolregion Nürnberg.</p>
 
-            <p>DDie Altstadt ist einer der größten weitgehend unversehrt erhaltenen historischen Stadtkerne in Deutschland und <em>seit 1993 offiziell als UNESCO-Weltkultur- und Naturerbe anerkannt</em>,  Bekannte Bauwerke sind das Alte Rathaus, „Klein-Venedig“ sowie der Domplatz inkl. Alter Hofhaltung, Neuer Residenz und der viertürmige Bamberger Dom, einer der früheren Kaiserdome. Darüber hinaus ist Bamberg überregional bekannt für seine vielfältige Biertradition ebenso wie für die traditionellen Gärtnereibetriebe mit großen Anbauflächen inmitten der Stadt.
+            <p>Die Altstadt ist einer der größten weitgehend unversehrt erhaltenen historischen Stadtkerne in Deutschland und <em>seit 1993 offiziell als UNESCO-Weltkultur- und Naturerbe anerkannt</em>,  Bekannte Bauwerke sind das Alte Rathaus, „Klein-Venedig“ sowie der Domplatz inkl. Alter Hofhaltung, Neuer Residenz und der viertürmige Bamberger Dom, einer der früheren Kaiserdome. Darüber hinaus ist Bamberg überregional bekannt für seine vielfältige Biertradition ebenso wie für die traditionellen Gärtnereibetriebe mit großen Anbauflächen inmitten der Stadt.
             </p>
             <p><a href="https://de.wikipedia.org/wiki/Bamberg)">Quelle Wikipedia</a></p>
 
-            <h3>Rosengarten</h3>
+            <h3>Klein Venedig</h3>
             <figure>
                 <img src="images/attraction.jpg"
-                    alt="Bild eines Strandes mit steilen Klippen im Hintergrund mit bewaldeter Rückseite">
-                <figcaption>Blick auf Kaikoura Strand (Quelle: <a
-                        href="https://pixabay.com/de/photos/insel-reisen-erkundung-drau%C3%9Fen-7108861/">hias_schell@pixabay</a>)
+                    alt="Bild auf Klein Venedig mit Boot auf der Regnitz">
+                <figcaption>Blick auf Klein Venedig (Quelle: <a
+                        href="https://pixabay.com/de/photos/bamberg-fischerh%C3%A4user-main-2740540/"></a>herbert2512</a>)
                 </figcaption>
             </figure>
 
