Header Bild angepasst

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <p>Die Altstadt ist einer der größten weitgehend unversehrt erhaltenen historischen Stadtkerne in Deutschland und <em>seit 1993 offiziell als UNESCO-Weltkultur- und Naturerbe anerkannt</em>,  Bekannte Bauwerke sind das Alte Rathaus, „Klein-Venedig“ sowie der Domplatz inkl. Alter Hofhaltung, Neuer Residenz und der viertürmige Bamberger Dom, einer der früheren Kaiserdome. Darüber hinaus ist Bamberg überregional bekannt für seine vielfältige Biertradition ebenso wie für die traditionellen Gärtnereibetriebe mit großen Anbauflächen inmitten der Stadt.
             </p>
-            <p><a href="https://de.wikipedia.org/wiki/Bamberg)">Quelle Wikipedia</a></p>
+            <p><a href="https://de.wikipedia.org/wiki/Bamberg">Quelle Wikipedia</a></p>
 
             <h3>Klein Venedig</h3>
             <figure>
@@ -38,20 +38,19 @@
 
             <h3>Links</h3>
             <ul>
-                <li> <a href="https://de.wikipedia.org/wiki/Liste_der_Baudenkmale_in_Kaikoura">Liste der Baudenkmale in
-                        Kaikoura</a></li>
-                <li> <a href="https://www.newzealand.com/de/kaikoura/">Kaikoura- 100% PURE NEW ZEALAND </a></li>
+                <li> <a href="https://www.getyourguide.de/-l2537/?cmp=bing&cmp=bing&ad_id=77653201340679&adgroup_id=1242448749747120&bid_match_type=be&campaign_id=434041392&device=c&feed_item_id=&keyword=sehensw%C3%BCrdigkeiten%20bamberg&loc_interest_ms=120127&loc_physical_ms=146440&match_type=e&msclkid=df8ad493c5b919d36d57b160e29c80d5&network=o&partner_id=CD951&target_id=kwd-77653388178857&utm_adgroup=lc%3D2537%3Abamberg%7Cfn%3Df3%7Cci%3D937%3Athings%20to%20do&utm_campaign=dc%3D27%3Ade%7Clc%3D2537%3Abamberg%7Cct%3Dcore%7Cln%3D39%3Ade%7Ctc%3Dall&utm_keyword=sehensw%C3%BCrdigkeiten%20bamberg&utm_medium=paid_search&utm_query=sehensw%C3%BCrdigkeiten%20bamberg&utm_source=bing">Liste der Sehenswürdigkeiten in Bamberg</a></li>
+                <li> <a href="https://www.booking.com/city/de/bamberg.de.html?aid=349015&pagename=city-bamberg&label=msn-up5A9rCfg3Z9PdCx1VcFLg-79920924824950:tikwd-79921078409586:loc-10:neo:mte:lp146440:dec:qs%20bamberg&utm_campaign=Germany&utm_medium=cpc&utm_source=bing&utm_term=up5A9rCfg3Z9PdCx1VcFLg&msclkid=1b75598e19a31f0a95083c7d3ece83e5&utm_content=Bamberg%20-%20UFI%3A-1743608">Hotels in Bamberg </a></li>
                 <li> <a
-                        href="https://www.tripadvisor.de/Attractions-g255374-Activities-Kaikoura_Canterbury_Region_South_Island.html">
-                        Kaikoura Sehenswürdigkeiten Tripadvisor</a></li>
+                        href="https://www.bamberg.info/">
+                        Touristen Information Bamberg</a></li>
             </ul>
 
         </article>
         <footer>
             <nav>
-                <a href="https://laurent2997.github.io/nz/">vorhergehende Etappe</a>
-                <a href="https://lealucia.github.io/nz">diese Etappe</a>
-                <a href="https://danielwebmap.github.io/nz/">erste Etappe</a>
+                <a href="https://laurent2997.github.io/top/">vorhergehende Etappe</a>
+                <a href="https://lealucia.github.io/top">diese Etappe</a>
+                <a href="https://danielwebmap.github.io/top/">erste Etappe</a>
             </nav>
         </footer>
     </main>
