--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <footer>
             <nav>
                 <a href="https://laurent2997.github.io/top/">vorhergehende Etappe</a>
-                <a href="https://lealucia.github.io/top">diese Etappe</a>
+                <a href="https://lealucia.github.io/top/">diese Etappe</a>
                 <a href="https://danielwebmap.github.io/top/">erste Etappe</a>
             </nav>
         </footer>
