--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="de">
 
 <head>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin=""/>
+    
+ <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+ integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+ crossorigin=""></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lieblinsorte</title>
@@ -35,6 +42,8 @@
                         href="https://pixabay.com/de/photos/bamberg-fischerh%C3%A4user-main-2740540/"></a>herbert2512</a>)
                 </figcaption>
             </figure>
+<!-- Hier soll die Karte rein-->
+            <div id="map"#map { height: 180px; } ></div>
 
             <h3>Links</h3>
             <ul>
