--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                 </figcaption>
             </figure>
 <!-- Hier soll die Karte rein-->
-            <div id="map"#map { height: 180px; } ></div>
+<h3>Übersichtskarte</h3>
+            <div id="map" style="width:90%; height:600px;" ></div>
 
             <h3>Links</h3>
             <ul>
