--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
             </nav>
         </footer>
     </main>
+<!-- hier müssen noch wichtige Daten für die Karte definiert werden-->
+    <script>
+        var map = L.map('map').setView([49.891667, 10.891667], 13); L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    maxZoom: 19,
+    attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+}).addTo(map);
+    </script>
 </body>
 
 </html>
