--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
     maxZoom: 19,
     attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
 }).addTo(map);
+
+var marker = L.marker([49.891667, 10.891667]).addTo(map);
+
     </script>
 </body>
 
