--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <p>Die Altstadt ist einer der größten weitgehend unversehrt erhaltenen historischen Stadtkerne in Deutschland und <em>seit 1993 offiziell als UNESCO-Weltkultur- und Naturerbe anerkannt</em>,  Bekannte Bauwerke sind das Alte Rathaus, „Klein-Venedig“ sowie der Domplatz inkl. Alter Hofhaltung, Neuer Residenz und der viertürmige Bamberger Dom, einer der früheren Kaiserdome. Darüber hinaus ist Bamberg überregional bekannt für seine vielfältige Biertradition ebenso wie für die traditionellen Gärtnereibetriebe mit großen Anbauflächen inmitten der Stadt.
             </p>
-            <p><a href="https://de.wikipedia.org/wiki/Bamberg">Quelle Wikipedia</a></p>
+            <p>Quelle:<a href="https://de.wikipedia.org/wiki/Bamberg">Wikipedia</a></p>
 
             <h3>Klein Venedig</h3>
             <figure>
