--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 
 <head>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-    crossorigin=""/>
-    
- <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
- integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
- crossorigin=""></script>
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lieblinsorte</title>
@@ -26,32 +24,46 @@
         <article>
             <h1>Lieblingsorte</h1>
             <h2>Bamberg</h2>
-            <p> <strong>Bamberg</strong> (mittelalterlich: Babenberg, bambergisch: Bambärch) ist eine fränkische kreisfreie Stadt im bayerischen Regierungsbezirk Oberfranken und Standort des Landratsamtes Bamberg. Sie ist die größte Mittelstadt Bayerns, Universitäts-, Schul- und Verwaltungsstadt, Sitz eines Oberlandesgerichtes und der Generalstaatsanwaltschaft Bamberg, wichtiges Wirtschaftszentrum Oberfrankens sowie Sitz des gleichnamigen Erzbistums und dessen Kirchenprovinz.
+            <p> <strong>Bamberg</strong> (mittelalterlich: Babenberg, bambergisch: Bambärch) ist eine fränkische
+                kreisfreie Stadt im bayerischen Regierungsbezirk Oberfranken und Standort des Landratsamtes Bamberg. Sie
+                ist die größte Mittelstadt Bayerns, Universitäts-, Schul- und Verwaltungsstadt, Sitz eines
+                Oberlandesgerichtes und der Generalstaatsanwaltschaft Bamberg, wichtiges Wirtschaftszentrum Oberfrankens
+                sowie Sitz des gleichnamigen Erzbistums und dessen Kirchenprovinz.
 
-                Die Stadt ist mit rund 80.000 Einwohnern die fünftgrößte Stadt Frankens, nach Nürnberg, Fürth, Würzburg und Erlangen sowie die größte Stadt Oberfrankens, die Agglomeration hat rund 117.000 Einwohner.[3] Bamberg ist in der Landesplanung als Oberzentrum des westlichen Oberfrankens ausgewiesen und zählt zur Metropolregion Nürnberg.</p>
+                Die Stadt ist mit rund 80.000 Einwohnern die fünftgrößte Stadt Frankens, nach Nürnberg, Fürth, Würzburg
+                und Erlangen sowie die größte Stadt Oberfrankens, die Agglomeration hat rund 117.000 Einwohner.[3]
+                Bamberg ist in der Landesplanung als Oberzentrum des westlichen Oberfrankens ausgewiesen und zählt zur
+                Metropolregion Nürnberg.</p>
 
-            <p>Die Altstadt ist einer der größten weitgehend unversehrt erhaltenen historischen Stadtkerne in Deutschland und <em>seit 1993 offiziell als UNESCO-Weltkultur- und Naturerbe anerkannt</em>,  Bekannte Bauwerke sind das Alte Rathaus, „Klein-Venedig“ sowie der Domplatz inkl. Alter Hofhaltung, Neuer Residenz und der viertürmige Bamberger Dom, einer der früheren Kaiserdome. Darüber hinaus ist Bamberg überregional bekannt für seine vielfältige Biertradition ebenso wie für die traditionellen Gärtnereibetriebe mit großen Anbauflächen inmitten der Stadt.
+            <p>Die Altstadt ist einer der größten weitgehend unversehrt erhaltenen historischen Stadtkerne in
+                Deutschland und <em>seit 1993 offiziell als UNESCO-Weltkultur- und Naturerbe anerkannt</em>, Bekannte
+                Bauwerke sind das Alte Rathaus, „Klein-Venedig“ sowie der Domplatz inkl. Alter Hofhaltung, Neuer
+                Residenz und der viertürmige Bamberger Dom, einer der früheren Kaiserdome. Darüber hinaus ist Bamberg
+                überregional bekannt für seine vielfältige Biertradition ebenso wie für die traditionellen
+                Gärtnereibetriebe mit großen Anbauflächen inmitten der Stadt.
             </p>
             <p>Quelle: <a href="https://de.wikipedia.org/wiki/Bamberg">Wikipedia</a></p>
 
             <h3>Klein Venedig</h3>
             <figure>
-                <img src="images/attraction.jpg"
-                    alt="Bild auf Klein Venedig mit Boot auf der Regnitz">
+                <img src="images/attraction.jpg" alt="Bild auf Klein Venedig mit Boot auf der Regnitz">
                 <figcaption>Blick auf Klein Venedig (Quelle: <a
                         href="https://pixabay.com/de/photos/bamberg-fischerh%C3%A4user-main-2740540/"></a>herbert2512</a>)
                 </figcaption>
             </figure>
-<!-- Hier ist die Karte rein-->
-<h3>Übersichtskarte</h3>
-            <div id="map" style="width:90%; height:600px;" ></div>
+            <!-- Hier ist die Karte rein-->
+            <h3>Übersichtskarte</h3>
+            <div id="map" style="width:90%; height:600px;"></div>
 
             <h3>Links</h3>
             <ul>
-                <li> <a href="https://www.getyourguide.de/-l2537/?cmp=bing&cmp=bing&ad_id=77653201340679&adgroup_id=1242448749747120&bid_match_type=be&campaign_id=434041392&device=c&feed_item_id=&keyword=sehensw%C3%BCrdigkeiten%20bamberg&loc_interest_ms=120127&loc_physical_ms=146440&match_type=e&msclkid=df8ad493c5b919d36d57b160e29c80d5&network=o&partner_id=CD951&target_id=kwd-77653388178857&utm_adgroup=lc%3D2537%3Abamberg%7Cfn%3Df3%7Cci%3D937%3Athings%20to%20do&utm_campaign=dc%3D27%3Ade%7Clc%3D2537%3Abamberg%7Cct%3Dcore%7Cln%3D39%3Ade%7Ctc%3Dall&utm_keyword=sehensw%C3%BCrdigkeiten%20bamberg&utm_medium=paid_search&utm_query=sehensw%C3%BCrdigkeiten%20bamberg&utm_source=bing">Liste der Sehenswürdigkeiten in Bamberg</a></li>
-                <li> <a href="https://www.booking.com/city/de/bamberg.de.html?aid=349015&pagename=city-bamberg&label=msn-up5A9rCfg3Z9PdCx1VcFLg-79920924824950:tikwd-79921078409586:loc-10:neo:mte:lp146440:dec:qs%20bamberg&utm_campaign=Germany&utm_medium=cpc&utm_source=bing&utm_term=up5A9rCfg3Z9PdCx1VcFLg&msclkid=1b75598e19a31f0a95083c7d3ece83e5&utm_content=Bamberg%20-%20UFI%3A-1743608">Hotels in Bamberg </a></li>
                 <li> <a
-                        href="https://www.bamberg.info/">
+                        href="https://www.getyourguide.de/-l2537/?cmp=bing&cmp=bing&ad_id=77653201340679&adgroup_id=1242448749747120&bid_match_type=be&campaign_id=434041392&device=c&feed_item_id=&keyword=sehensw%C3%BCrdigkeiten%20bamberg&loc_interest_ms=120127&loc_physical_ms=146440&match_type=e&msclkid=df8ad493c5b919d36d57b160e29c80d5&network=o&partner_id=CD951&target_id=kwd-77653388178857&utm_adgroup=lc%3D2537%3Abamberg%7Cfn%3Df3%7Cci%3D937%3Athings%20to%20do&utm_campaign=dc%3D27%3Ade%7Clc%3D2537%3Abamberg%7Cct%3Dcore%7Cln%3D39%3Ade%7Ctc%3Dall&utm_keyword=sehensw%C3%BCrdigkeiten%20bamberg&utm_medium=paid_search&utm_query=sehensw%C3%BCrdigkeiten%20bamberg&utm_source=bing">Liste
+                        der Sehenswürdigkeiten in Bamberg</a></li>
+                <li> <a
+                        href="https://www.booking.com/city/de/bamberg.de.html?aid=349015&pagename=city-bamberg&label=msn-up5A9rCfg3Z9PdCx1VcFLg-79920924824950:tikwd-79921078409586:loc-10:neo:mte:lp146440:dec:qs%20bamberg&utm_campaign=Germany&utm_medium=cpc&utm_source=bing&utm_term=up5A9rCfg3Z9PdCx1VcFLg&msclkid=1b75598e19a31f0a95083c7d3ece83e5&utm_content=Bamberg%20-%20UFI%3A-1743608">Hotels
+                        in Bamberg </a></li>
+                <li> <a href="https://www.bamberg.info/">
                         Touristen Information Bamberg</a></li>
             </ul>
 
@@ -64,19 +76,19 @@
             </nav>
         </footer>
     </main>
-<!-- hier müssen noch wichtige Daten für die Karte definiert werden-->
+    <!-- hier müssen noch wichtige Daten für die Karte definiert werden-->
     <script>
         var map = L.map('map').setView([49.891667, 10.891667], 13); L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    maxZoom: 19,
-    attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-}).addTo(map);
+            maxZoom: 19,
+            attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+        }).addTo(map);
 
 
-var marker = L.marker([49.891667, 10.891667]).addTo(map);
+        var marker = L.marker([49.891667, 10.891667]).addTo(map);
 
-marker.bindPopup("<b>Hello world!</b><br>I am a popup.").openPopup();
-circle.bindPopup("I am a circle.");
-polygon.bindPopup("I am a polygon.");
+        marker.bindPopup("<b>Hello world!</b><br>I am a popup.").openPopup();
+        circle.bindPopup("I am a circle.");
+        polygon.bindPopup("I am a polygon.");
 
     </script>
 </body>
