--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="de">
 
 <head>
+
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
     crossorigin=""/>
@@ -11,7 +12,12 @@
  crossorigin=""></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Lieblinsorte</title>
+
+    <!-- Favicon einfügen-->
+    <link rel="shortcut icon" href="images/user.jpg" type="image/x-icon">
+
 </head>
 
 <body>
