--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
 
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -15,6 +14,19 @@
 
     <!-- Favicon einfügen-->
     <link rel="shortcut icon" href="images/user.jpg" type="image/x-icon">
+
+  <!-- Leaflet -->
+  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+  integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+  
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+
+  <script defer src="main.js">
+
+  </script>
 
 </head>
 
@@ -58,6 +70,7 @@
                 </figcaption>
             </figure>
             <!-- Hier ist die Karte rein-->
+
             <h3>Übersichtskarte</h3>
             <div id="map" style="width:90%; height:600px;"></div>
 
@@ -76,9 +89,9 @@
         </article>
         <footer>
             <nav>
-                <a href="https://laurent2997.github.io/top/">vorhergehende Etappe</a>
+                <a href="https://laurent2997.github.io/top/"><i class="fa-solid fa-arrow-left"></i> vorhergehende Etappe</a>
                 <a href="https://lealucia.github.io/top/">diese Etappe</a>
-                <a href="https://danielwebmap.github.io/top/">erste Etappe</a>
+                <a href="https://danielwebmap.github.io/top/">erste Etappe <i class="fa-solid fa-arrow-right"></i></a>
             </nav>
         </footer>
     </main>
