main.css erstellt

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         }).addTo(map);
 
 
-        var marker = L.marker([49.891667, 10.891667]).addTo(map);
+        var marker = L.marker([49.891667, 10.891667], 13).addTo(map);
 
         marker.bindPopup("<b>Hello world!</b><br>I am a popup.").openPopup();
         circle.bindPopup("I am a circle.");
