--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Favicon einfügen-->
     <link rel="shortcut icon" href="images/user.jpg" type="image/x-icon">
 
-  <!-- Leaflet -->
+    <!-- Leaflet -->
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
@@ -69,7 +69,8 @@
                         href="https://pixabay.com/de/photos/bamberg-fischerh%C3%A4user-main-2740540/"></a>herbert2512</a>)
                 </figcaption>
             </figure>
-            <!-- Hier ist die Karte rein-->
+            
+            <!-- Hier  die Karte rein-->
 
             <h3>Übersichtskarte</h3>
             <div id="map" style="width:90%; height:600px;"></div>
