--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 
-ib<head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lieblinsorte</title>
@@ -24,6 +24,7 @@ ib<head>
     <link rel="stylesheet" href="main.css">
 
     <script defer src="main.js"> </script>
+
 </head>
 
 <body>
@@ -71,7 +72,7 @@ ib<head>
             <!-- Hier  die Karte rein-->
 
             <h3>Übersichtskarte</h3>
-            <div id="map"></div>
+            <div id="map"style="width:90%; height:600px"></div>
 
             <h3>Links</h3>
             <ul>
@@ -92,16 +93,8 @@ ib<head>
             <a href="https://danielwebmap.github.io/top/">erste Etappe <i class="fa-solid fa-arrow-right"></i></a>
         </nav>
     </footer>
-    var map = L.map('map').setView([49.891667, 10.891667], 13); L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        maxZoom: 19,
-        attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-    }).addTo(map);
-
-
-    var marker = L.marker([49.891667, 10.891667], 13).addTo(map);
-    marker.bindPopup("<b>Hello world!</b><br>I am a popup.").openPopup();
-        circle.bindPopup("I am a circle.");
-        polygon.bindPopup("I am a polygon.");
+  
+    
 
 </body>
 </html>
